scene/scene: schedule pending repaints for child items too

Otherwise, the cursor surface or image item's pending repaints get ignored.

BUG: 511653